--- a/packages/esling-plugin-asasinmode/package.json
+++ b/packages/esling-plugin-asasinmode/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-asasinmode",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "",
   "author": "asasinmode <skin9470@gmail.com> (https://github.com/asasinmode/)",
   "license": "MIT",
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "rimraf dist && unbuild",
     "stub": "unbuild --stub",
-    "prepublishOnly": "nr build"
+    "prepublishOnly": "pnpm run build"
   },
   "dependencies": {
     "@typescript-eslint/utils": "^5.47.0"
